--- a/glorify/index.html
+++ b/glorify/index.html
@@ -171,7 +171,7 @@
                 <div>
                   <img src="../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h5 class="colorBlack">Design System |  Efficiently Bulid &#38; Maintain Components</h5>
+                    <h5 class="colorBlack">Design System | Efficiently Bulid &#38; Maintain Components</h5>
                   </div>
                 </div>
               </a>
@@ -196,7 +196,7 @@
           <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
           </li>
         </ul>
- 
+
       </div>
       <div class="hamburger">
         <span class="bar GLORIFY"></span>
@@ -247,18 +247,19 @@
       <div class="element">
         <h3><strong>Context</strong></h3>
         <h4>Glorify is a mobile application that offers a vast library of
-            content designed to support users in their spiritual journey,
+          content designed to support users in their spiritual journey,
           particularly those who follow the Christian faith. The app provides a
           range of resources such as daily devotionals, scripture readings, prayer guides, and other faith-based content
-          that users can access at their convenience. Glorify's content is designed to be immersive and engaging, with a focus on helping users deepen their spiritual
-            connection and growth.</h4>
+          that users can access at their convenience. Glorify's content is designed to be immersive and engaging, with a
+          focus on helping users deepen their spiritual
+          connection and growth.</h4>
       </div>
     </div>
     <div class="Grid-cell">
       <div class="element">
         <h3><strong>Opportunity</strong></h3>
         <h4>Despite its rich content, Glorify has been primarily a single-player
-            experience, lacking the community engagement features that
+          experience, lacking the community engagement features that
           are integral to Christianity. This can limit the app's ability to fully meet the user's needs for social and
           collaborative experiences in their faith journey. To improve the user experience, I exploring ways to
           incorporate community engagement features that align with the values of Christianity. </h4>
@@ -593,14 +594,84 @@
             <img class="modal-target" src="Research_Diagram_Research.svg" alt="Research Process">
           </div>
         </div>
-        <div class="Grid Grid--full ">
+        <div class="Grid Grid--gutters Grid--1of6">
+          <div class="Grid-cell"> 
+            <div class="element">
+              <div id="audio-container">
+                <audio id="myAudio">
+                  <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3"
+                    type="audio/mpeg">
+                  Your browser does not support the audio element.
+                </audio>
+                <br>
+                <button id="play-button">Play</button>
+                <div id="time-display">0:00 / 0:00</div>
+              </div>
+            </div>
+          </div>
           <div class="Grid-cell">
             <div class="element">
               <h3> The research goal is to study the <span class="textDecor GLORIFY">Christian community</span>,
                 understand their interaction patterns, discover why they wish to connect with others in the community,
                 and explore how to incorporate this <span class="textDecor GLORIFY">initial community version into the
                   existing Glorify app</span>.
+
               </h3>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="Grid Grid--gutters Grid--cols-2">
+          <div class="Grid-cell">
+            <div class="element">
+              <h3> The research goal is to study the <span class="textDecor GLORIFY">Christian community</span>,
+                understand their interaction patterns, discover why they wish to connect with others in the community,
+                and explore how to incorporate this <span class="textDecor GLORIFY">initial community version into the
+                  existing Glorify app</span>.
+
+              </h3>
+            </div>
+          </div>
+          <div class="Grid-cell">
+            <div class="element">
+              <div id="audio-container">
+                <audio id="myAudio">
+                  <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3"
+                    type="audio/mpeg">
+                  Your browser does not support the audio element.
+                </audio>
+                <br>
+                <button id="play-button">Play</button>
+                <div id="time-display">0:00 / 0:00</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="Grid Grid--full u-textCenter">
+          <div class="Grid-cell">
+            <div class="element">
+              <div id="audio-container">
+                <audio id="myAudio">
+                  <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3"
+                    type="audio/mpeg">
+                  Your browser does not support the audio element.
+                </audio>
+                <br>
+                <button id="play-button">Play</button>
+                <div id="time-display">0:00 / 0:00</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="Grid Grid--full u-textCenter">
+          <div class="Grid-cell">
+            <div class="element">
+              <audio controls>
+                <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3"
+                  type="audio/mpeg">
+                Your browser does not support the audio element.
+              </audio>
             </div>
           </div>
         </div>
@@ -4902,7 +4973,8 @@
           <div class="Grid-cell">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly">
-                <img title="Copy Email to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="Mail">
+                <img title="Copy Email to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax"
+                  src="../icon/mail.svg" alt="Mail">
                 <p class="clickIconCopy">vickyw.design@gmail.com </p>
               </button>
             </div>
