--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
           </div>
 
         </div>
-        <div class="Grid Grid--gutters Grid--cols-12 u-textCenter Grid--center">
+        <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
 
 
           <div class="Grid-cell">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly">
-                <img title="Copy Email Address to Clipboard" class="iconM hoverGrey100 paddingMax borderRadiusMax"
+                <img title="Copy Email to Clipboard" class="iconM hoverGrey100 paddingMax borderRadiusMax"
                   src="./icon/mail.svg" alt="LinkedIn">
                 <p class="clickIconCopy">vickyw.design@gmail.com</p>
               </button>
