--- a/glorify/index.html
+++ b/glorify/index.html
@@ -594,38 +594,40 @@
             <img class="modal-target" src="Research_Diagram_Research.svg" alt="Research Process">
           </div>
         </div>
-        <div class="Grid Grid--gutters Grid--1of6">
-          <div class="Grid-cell"> 
-            <div class="element">
-              <div id="audio-container">
-                <audio id="myAudio">
-                  <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3"
-                    type="audio/mpeg">
-                  Your browser does not support the audio element.
-                </audio>
-                <br>
-                <button id="play-button">Play</button>
-                <div id="time-display">0:00 / 0:00</div>
-              </div>
-            </div>
-          </div>
+
+        <div class="Grid Grid--full">
           <div class="Grid-cell">
             <div class="element">
-              <h3> The research goal is to study the <span class="textDecor GLORIFY">Christian community</span>,
+
+              <div class="relative">              <h3> The research goal is to study the <span class="textDecor GLORIFY">Christian community</span>,
                 understand their interaction patterns, discover why they wish to connect with others in the community,
                 and explore how to incorporate this <span class="textDecor GLORIFY">initial community version into the
                   existing Glorify app</span>.
 
               </h3>
+                <div class="absolute">
+                  <div id="audio-container">
+                    <audio id="myAudio">
+                      <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3"
+                        type="audio/mpeg">
+                      Your browser does not support the audio element.
+                    </audio>
+                    <br>
+                    <button id="play-button">Play</button>
+                    <div id="time-display">0:00 / 0:00</div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
 
+
         <div class="Grid Grid--gutters Grid--cols-2">
           <div class="Grid-cell">
-            <div class="element">
-              <h3> The research goal is to study the <span class="textDecor GLORIFY">Christian community</span>,
+            <div class="element  ">
+              <h3 class="widthMax"> The research goal is to study the <span class="textDecor GLORIFY">Christian community</span>,
                 understand their interaction patterns, discover why they wish to connect with others in the community,
                 and explore how to incorporate this <span class="textDecor GLORIFY">initial community version into the
                   existing Glorify app</span>.
@@ -633,7 +635,7 @@
               </h3>
             </div>
           </div>
-          <div class="Grid-cell">
+          <div class="Grid-cell ">
             <div class="element">
               <div id="audio-container">
                 <audio id="myAudio">
