--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1408,6 +1408,15 @@
             </div>
           </div>
 
+          <div class="rowVW">
+            <div class="Demo widthMax">
+              <div class="elementInnerDemo content-1of2"></div>
+            </div>
+            <div class="Demo">
+              <div class="elementInnerDemo content-1of2"></div>
+            </div>
+          </div>
+
           <div class="blankHXS"></div>
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -1419,7 +1428,7 @@
           </div>
 
           <div class="Grid Grid--full u-textCenter">
-            <div class="Grid-cell paddingNone">
+            <div class="Grid-cell">
               <div class="Demo">
                 <div class="elementInnerDemo content-1of1"></div>
               </div>
