--- a/design_system/index.html
+++ b/design_system/index.html
@@ -3391,6 +3391,48 @@
 
         </div>
         <div class="blankHM"></div>
+
+        <!-- Arrow -->
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <h2 class="tArrow">Audio Player<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="blankHXS"></div>
+
+        <div class="element">
+
+          <div class="rowVW cardAPPOINTA wrapper centerVer">
+
+            <div class="widthMax">
+              <div class="element">
+                <h3> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+                </h3>
+              </div>
+            </div>
+            <div class="paddingleft">
+              <div class="element widthFitContent">
+                <div class="audio-container">
+                  <audio id="myAudio2">
+                    <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3"
+                      type="audio/mpeg">
+                    Your browser does not support the audio element.
+                  </audio>
+                  <br>
+                  <button class="play-button">Play</button>
+                  <div class="time-display">0:00 / 0:00</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="blankHM"></div>
         <!-- Arrow -->
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
