--- a/glorify/index.html
+++ b/glorify/index.html
@@ -594,36 +594,41 @@
             <img class="modal-target" src="Research_Diagram_Research.svg" alt="Research Process">
           </div>
         </div>
+        <div class="element">
 
-        <div class="rowVW">
-          <div class="widthMax">
-            <div class="element">
-              <h3> The research goal is to study the Christian community, understand their interaction patterns, discover why they wish to connect with others in the community,
-                and explore how to incorporate this initial community version into the existing Glorify app.
-              </h3>
+          <div class="rowVW cardGlorify">
+
+            <div class="widthMax">
+              <div class="element">
+                <h3> The research goal is to study the Christian community, understand their interaction patterns,
+                  discover why they wish to connect with others in the community,
+                  and explore how to incorporate this initial community version into the existing Glorify app.
+                </h3>
+              </div>
             </div>
-          </div>
-          <div class="paddingleft">
-            <div class="element widthFitContent">
-              <div class="audio-container">
-                <audio id="myAudio2">
-                  <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3" type="audio/mpeg">
-                  Your browser does not support the audio element.
-                </audio>
-                <br>
-                <button class="play-button">Play</button>
-                <div class="time-display">0:00 / 0:00</div>
+            <div class="paddingleft">
+              <div class="element widthFitContent">
+                <div class="audio-container">
+                  <audio id="myAudio2">
+                    <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3"
+                      type="audio/mpeg">
+                    Your browser does not support the audio element.
+                  </audio>
+                  <br>
+                  <button class="play-button">Play</button>
+                  <div class="time-display">0:00 / 0:00</div>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
- 
 
 
 
- 
- 
+
+
+
         <div class="Grid Grid--full u-textCenter">
           <div class="Grid-cell">
             <div class="element">
