--- a/design_system/index.html
+++ b/design_system/index.html
@@ -3405,22 +3405,20 @@
         <div class="blankHXS"></div>
 
         <div class="element">
-
-          <div class="rowVW cardAPPOINTA wrapper centerVer">
-
-            <div class="widthMax">
-              <div class="element">
-                <h3> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-                </h3>
-              </div>
+          <div class="rowVW cardAPPOINTA shadowBox wrapper centerVer">
+            <div class="widthMax paddingleft">
+              <h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                officia deserunt mollit anim id est laborum.
+              </h4>
             </div>
             <div class="paddingleft">
-              <div class="element widthFitContent">
+              <div class="widthFitContent">
                 <div class="audio-container">
-                  <audio id="myAudio2">
-                    <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3"
-                      type="audio/mpeg">
+                  <audio id="myAudio1">
+                    <source src="https://res.cloudinary.com/kreiva/video/upload/v1680162890/new-edm-music-beet-mr-sandeep-rock-141616_zjykff.mp3">
                     Your browser does not support the audio element.
                   </audio>
                   <br>
@@ -3431,6 +3429,7 @@
             </div>
           </div>
         </div>
+
 
         <div class="blankHM"></div>
         <!-- Arrow -->
