--- a/glorify/index.html
+++ b/glorify/index.html
@@ -518,6 +518,37 @@
         </div>
       </div>
     </div>
+
+
+
+    <div class="element">
+      <div class="rowVW cardGlorify shadowBox wrapper centerVer">
+        <div class="widthMax paddingleft">
+            <h4> Glorify is a Christian mobile app with a large collection of spiritual content for individuals.
+              However, it's missing social and community features, which limits its use for daily worship. I'm working
+              to add community options to improve the user experience.
+            </h4>
+            <h4>
+              Begin by learning why Christians value community, then brainstorm and test potential solutions. Study
+              Glorify's existing app structure, integrate the new community features and refine through testing.
+              Ultimately, aims to enhance the group worship experience.
+            </h4>
+        </div>
+        <div class="paddingleft">
+          <div class=" widthFitContent">
+            <div class="audio-container">
+              <audio id="myAudio1">
+                <source src="Audio_Intro.mp3">
+                Your browser does not support the audio element.
+              </audio>
+              <br>
+              <button class="Glorify play-button">Play</button>
+              <div class="time-display">0:00 / 0:00</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="blankHXS"></div>
 
     <div class="wrapper">
@@ -595,9 +626,7 @@
           </div>
         </div>
         <div class="element">
-
-          <div class="rowVW cardGlorify">
-
+          <div class="rowVW cardGlorify wrapper centerVer">
             <div class="widthMax">
               <div class="element">
                 <h3> The research goal is to study the Christian community, understand their interaction patterns,
@@ -615,13 +644,14 @@
                     Your browser does not support the audio element.
                   </audio>
                   <br>
-                  <button class="play-button">Play</button>
+                  <button class="Glorify play-button">Play</button>
                   <div class="time-display">0:00 / 0:00</div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+
 
 
 
