--- a/glorify/index.html
+++ b/glorify/index.html
@@ -504,26 +504,25 @@
   <!-- LRcarousel-->
   <main>
     <div class="blankHS"></div>
-    <div class="Grid Grid--full u-textCenter">
+    <div class="Grid Grid--full wrapper">
       <div class="Grid-cell">
         <h1 class="Grid Grid--center"> <span class="specialTextL">Case study</span><img class="moveUpDown widthLogo"
             src="../icon/arrow-down.svg" alt="Scroll down">
         </h1>
       </div>
-    </div>
-    <div class="wrapper">
-      <div class="Grid Grid--full">
-        <div class="Grid-cell">
-          <img class="modal-target" src="Research_Diagram.svg" alt="Desgin Thinking Process">
+      <div class="">
+        <div class="Grid Grid--full">
+          <div class="Grid-cell">
+            <img class="modal-target" src="Research_Diagram.svg" alt="Desgin Thinking Process">
+          </div>
         </div>
       </div>
-    </div>
 
 
 
-    <div class="element">
-      <div class="rowVW cardGlorify shadowBox wrapper centerVer">
-        <div class="widthMax paddingleft">
+      <div class="element">
+        <div class="rowVW cardGlorify shadowBox wrapper centerVer">
+          <div class="widthMax paddingleft">
             <h4> Glorify is a Christian mobile app with a large collection of spiritual content for individuals.
               However, it's missing social and community features, which limits its use for daily worship. I'm working
               to add community options to improve the user experience.
@@ -533,22 +532,24 @@
               Glorify's existing app structure, integrate the new community features and refine through testing.
               Ultimately, aims to enhance the group worship experience.
             </h4>
-        </div>
-        <div class="paddingleft">
-          <div class=" widthFitContent">
-            <div class="audio-container">
-              <audio id="myAudio1">
-                <source src="Audio_Intro.mp3">
-                Your browser does not support the audio element.
-              </audio>
-              <br>
-              <button class="Glorify play-button">Play</button>
-              <div class="time-display">0:00 / 0:00</div>
+          </div>
+          <div class="paddingleft">
+            <div class=" widthFitContent">
+              <div class="audio-container">
+                <audio id="myAudio1">
+                  <source src="Audio_Intro.mp3">
+                  Your browser does not support the audio element.
+                </audio>
+                <br>
+                <button class="Glorify play-button">Play</button>
+                <div class="time-display">0:00 / 0:00</div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <div class="blankHXS"></div>
 
     <div class="wrapper">
@@ -626,21 +627,19 @@
           </div>
         </div>
         <div class="element">
-          <div class="rowVW cardGlorify wrapper centerVer">
-            <div class="widthMax">
-              <div class="element">
-                <h3> The research goal is to study the Christian community, understand their interaction patterns,
-                  discover why they wish to connect with others in the community,
-                  and explore how to incorporate this initial community version into the existing Glorify app.
-                </h3>
-              </div>
+          <div class="rowVW cardGlorify shadowBox wrapper centerVer">
+            <div class="widthMax paddingleft">
+              <h4>The goal is to create the first version of a Christian community on the Glorify platform to boost user
+                engagement. Start by understanding the community: why people join, when they join, their activities,
+                motivations, and goals. Use an affinity map to organize qualitative data from user interviews. Then
+                brainstorm solutions and sketch key concepts for testing, aiming to understand user preferences.
+              </h4>
             </div>
             <div class="paddingleft">
-              <div class="element widthFitContent">
+              <div class=" widthFitContent">
                 <div class="audio-container">
                   <audio id="myAudio2">
-                    <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3"
-                      type="audio/mpeg">
+                    <source src="Audio_Understand.mp3">
                     Your browser does not support the audio element.
                   </audio>
                   <br>
@@ -653,23 +652,6 @@
         </div>
 
 
-
-
-
-
-
-
-        <div class="Grid Grid--full u-textCenter">
-          <div class="Grid-cell">
-            <div class="element">
-              <audio controls>
-                <source src="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3"
-                  type="audio/mpeg">
-                Your browser does not support the audio element.
-              </audio>
-            </div>
-          </div>
-        </div>
       </div>
 
       <section id="content11">
@@ -681,6 +663,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -691,6 +675,8 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
+
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin"><strong>Context &#38; problem statement</strong> </h3>
             <div class="accordion-content">
@@ -1183,16 +1169,15 @@
       </section>
       <section id="content12" class="GreyBg100">
         <div class="wrapper">
-          <!-- Arrow -->
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2 class="tArrow">Findings <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-                </h2>
+                <h1> <strong class="colorGLORIFYOrange"> Findings</strong> </h1>
               </div>
             </div>
           </div>
-          <!-- Arrow -->
+          <div class="blankHXS"></div>
 
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
@@ -1286,6 +1271,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -2259,7 +2246,33 @@
           </div>
         </div>
 
-
+        <div class="element">
+          <div class="rowVW cardGlorify shadowBox wrapper centerVer">
+            <div class="widthMax paddingleft">
+              <h4>Based on concept testing, the group prayer option received positive feedback for encouraging open
+                interaction, insight-sharing, and active participation. It's also easy to engage with and low-pressure.
+              </h4>
+              <h4>
+                To integrate this first version of the community feature into the existing Glorify system, start with
+                card sorting and sitemap creation. Then, develop wireframes for testing, aiming to streamline all
+                workflows to prevent issues later on.
+              </h4>
+            </div>
+            <div class="paddingleft">
+              <div class=" widthFitContent">
+                <div class="audio-container">
+                  <audio id="myAudio3">
+                    <source src="Audio_Design.mp3">
+                    Your browser does not support the audio element.
+                  </audio>
+                  <br>
+                  <button class="Glorify play-button">Play</button>
+                  <div class="time-display">0:00 / 0:00</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="Grid Grid--full ">
           <div class="Grid-cell">
             <div class="element">
@@ -2282,7 +2295,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHS"></div>
+          <div class="blankHXS"></div>
 
           <!-- Arrow -->
           <div class="Grid Grid--full">
@@ -2351,6 +2364,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -2439,6 +2454,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
           <!-- Arrow -->
           <div class="element">
             <h2 class="tArrow">Group Prayer <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -3313,6 +3330,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
           <!-- Arrow -->
           <div class="element">
             <h2 class="tArrow">Group Prayer <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -3929,6 +3948,7 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
 
 
           <!-- Arrow -->
