CS Audio update

--- a/glorify/index.html
+++ b/glorify/index.html
@@ -518,11 +518,9 @@
         </div>
       </div>
 
-
-
-      <div class="element">
-        <div class="rowVW cardGlorify shadowBox wrapper centerVer">
-          <div class="widthMax paddingleft">
+      <div class="paddingM">
+        <div class="rowVW cardGlorify shadowBox centerVer">
+          <div class="widthMax paddingM">
             <h4> Glorify is a Christian mobile app with a large collection of spiritual content for individuals.
               However, it's missing social and community features, which limits its use for daily worship. I'm working
               to add community options to improve the user experience.
@@ -534,7 +532,7 @@
             </h4>
           </div>
           <div class="paddingleft">
-            <div class=" widthFitContent">
+            <div class="widthFitContent">
               <div class="audio-container">
                 <audio id="myAudio1">
                   <source src="Audio_Intro.mp3">
@@ -548,6 +546,8 @@
           </div>
         </div>
       </div>
+
+
     </div>
 
     <div class="blankHXS"></div>
@@ -626,10 +626,11 @@
             <img class="modal-target" src="Research_Diagram_Research.svg" alt="Research Process">
           </div>
         </div>
-        <div class="element">
-          <div class="rowVW cardGlorify shadowBox wrapper centerVer">
-            <div class="widthMax paddingleft">
-              <h4>The goal is to create the first version of a Christian community on the Glorify platform to boost user
+        <div class="paddingM">
+          <div class="rowVW cardGlorify shadowBox centerVer">
+            <div class="widthMax paddingM">
+              <h4 class="">The goal is to create the first version of a Christian community on the Glorify
+                platform to boost user
                 engagement. Start by understanding the community: why people join, when they join, their activities,
                 motivations, and goals. Use an affinity map to organize qualitative data from user interviews. Then
                 brainstorm solutions and sketch key concepts for testing, aiming to understand user preferences.
@@ -650,8 +651,6 @@
             </div>
           </div>
         </div>
-
-
       </div>
 
       <section id="content11">
@@ -2245,10 +2244,9 @@
             <img class="modal-target" src="Research_Diagram_Design.svg" alt="Design Process">
           </div>
         </div>
-
-        <div class="element">
-          <div class="rowVW cardGlorify shadowBox wrapper centerVer">
-            <div class="widthMax paddingleft">
+        <div class="paddingM">
+          <div class="rowVW cardGlorify shadowBox centerVer">
+            <div class="widthMax paddingM">
               <h4>Based on concept testing, the group prayer option received positive feedback for encouraging open
                 interaction, insight-sharing, and active participation. It's also easy to engage with and low-pressure.
               </h4>
@@ -2261,7 +2259,7 @@
             <div class="paddingleft">
               <div class=" widthFitContent">
                 <div class="audio-container">
-                  <audio id="myAudio3">
+                  <audio id="myAudio2">
                     <source src="Audio_Design.mp3">
                     Your browser does not support the audio element.
                   </audio>
@@ -2270,16 +2268,6 @@
                   <div class="time-display">0:00 / 0:00</div>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-        <div class="Grid Grid--full ">
-          <div class="Grid-cell">
-            <div class="element">
-              <h3> Strive to ensure that the initial version of the community design can be <span
-                  class="textDecor GLORIFY">seamlessly integrated into the existing mobile app</span>. Additionally,
-                identify potential issues related to the concept and user flow.
-              </h3>
             </div>
           </div>
         </div>
@@ -3307,17 +3295,35 @@
             <img class="modal-target " src="Research_Diagram_Iterate.svg" alt="Iterate Process">
           </div>
         </div>
-
-        <div class="Grid Grid--full ">
-          <div class="Grid-cell">
-            <div class="element">
-              <h3> The iteration prioritizes simplifying the user flow, making it intuitive to locate and navigate.
-                Simultaneously, the design should be appealing enough to motivate users to participate in group
-                activities and forge connections.
-              </h3>
+        <div class="paddingM">
+          <div class="rowVW cardGlorify shadowBox centerVer">
+            <div class="widthMax paddingM">
+              <h4>To reduce the one-minute navigation time for creating and joining group worship, conduct tree testing
+                to streamline the group prayer flow. Ensure the experience is straightforward and seamless.
+              </h4>
+              <h4>
+                Users have expressed a desire for more information before joining a group prayer room. Additionally,
+                research shows that participants often struggle with varying worship styles or environments. To address
+                these issues, update the group prayer list to include more details, such as the topic, description, and
+                current number of participants in each prayer room.
+              </h4>
+            </div>
+            <div class="paddingleft">
+              <div class=" widthFitContent">
+                <div class="audio-container">
+                  <audio id="myAudio2">
+                    <source src="Audio_Iterate.mp3">
+                    Your browser does not support the audio element.
+                  </audio>
+                  <br>
+                  <button class="Glorify play-button">Play</button>
+                  <div class="time-display">0:00 / 0:00</div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+
       </div>
       <div class="blankHXS"></div>
       <section id="content31">
@@ -4325,13 +4331,26 @@
             <img class="modal-target " src="Research_Diagram_Enhance.svg" alt="Mind map">
           </div>
         </div>
-
-        <div class="Grid Grid--full ">
-          <div class="Grid-cell">
-            <div class="element">
-              <h3>The high-fidelity prototype aims to foster smooth interactions during group prayer, ensuring that it
-                is interactive and helps users experience a sense of togetherness.
-              </h3>
+        <div class="paddingM">
+          <div class="rowVW cardGlorifyBg shadowBox centerVer">
+            <div class="widthMax paddingM">
+              <h4>The high-fidelity prototype is designed based on user research to address specific needs: fostering
+                shared faith, mutual understanding, support, and opportunities for connection. We'll test and fine-tune
+                these aspects to ensure an effective and engaging user experience.
+              </h4>
+            </div>
+            <div class="paddingleft">
+              <div class=" widthFitContent">
+                <div class="audio-container">
+                  <audio id="myAudio2">
+                    <source src="Audio_Prototype.mp3">
+                    Your browser does not support the audio element.
+                  </audio>
+                  <br>
+                  <button class="Glorify play-button">Play</button>
+                  <div class="time-display">0:00 / 0:00</div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
