--- a/design_system/index.html
+++ b/design_system/index.html
@@ -3406,7 +3406,7 @@
 
         <div class="element">
           <div class="rowVW cardAPPOINTA shadowBox wrapper centerVer">
-            <div class="widthMax paddingleft">
+            <div class="widthMax paddingM">
               <h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
