--- a/glorify/index.html
+++ b/glorify/index.html
@@ -621,14 +621,13 @@
         </div>
       </div>
       <div class="wrapper">
-        <div class="Grid Grid--full">
-          <div class="Grid-cell">
-            <img class="modal-target" src="Research_Diagram_Research.svg" alt="Research Process">
-          </div>
+
+        <div class="paddingM">
+          <img class="modal-target" src="Research_Diagram_Research.svg" alt="Research Process">
         </div>
         <div class="paddingM">
           <div class="rowVW cardGlorify shadowBox centerVer">
-            <div class="widthMax paddingM">
+            <div class="widthMax paddingS">
               <h4 class="">The goal is to create the first version of a Christian community on the Glorify
                 platform to boost user
                 engagement. Start by understanding the community: why people join, when they join, their activities,
@@ -2239,10 +2238,8 @@
         </div>
       </div>
       <div class="wrapper">
-        <div class="Grid Grid--full">
-          <div class="Grid-cell">
-            <img class="modal-target" src="Research_Diagram_Design.svg" alt="Design Process">
-          </div>
+        <div class="paddingM">
+          <img class="modal-target" src="Research_Diagram_Design.svg" alt="Design Process">
         </div>
         <div class="paddingM">
           <div class="rowVW cardGlorify shadowBox centerVer">
@@ -3290,11 +3287,10 @@
         </div>
       </div>
       <div class="wrapper">
-        <div class="Grid Grid--full">
-          <div class="Grid-cell">
-            <img class="modal-target " src="Research_Diagram_Iterate.svg" alt="Iterate Process">
-          </div>
+        <div class="paddingM">
+          <img class="modal-target " src="Research_Diagram_Iterate.svg" alt="Iterate Process">
         </div>
+
         <div class="paddingM">
           <div class="rowVW cardGlorify shadowBox centerVer">
             <div class="widthMax paddingM">
@@ -4326,11 +4322,10 @@
       </div>
       <div class="blankHXS"></div>
       <div class="wrapper">
-        <div class="Grid Grid--full">
-          <div class="Grid-cell">
-            <img class="modal-target " src="Research_Diagram_Enhance.svg" alt="Mind map">
-          </div>
+        <div class="paddingM">
+          <img class="modal-target " src="Research_Diagram_Enhance.svg" alt="Mind map">
         </div>
+
         <div class="paddingM">
           <div class="rowVW cardGlorifyBg shadowBox centerVer">
             <div class="widthMax paddingM">
